--- a/WebAppMain/packages.config
+++ b/WebAppMain/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
 </packages>
